# PDFize

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  README.md  pdfize.py  pyproject.toml  requirements.txt
scripts/: rebuild.bat  venv.bat
scripts/tests/: clear.bat  img-to-pdf.bat  pdf-merge.bat  pdf-split.bat  pdf-to-img-mp.bat  pdf-to-img.bat  run-all.bat
src/: __init__.py  init.py
src/new_process/: lock.py
src/pdfize/: __main__.py  info.py
src/pdfize/new_process/: init.py
src/pdfize/processor/: base.py  image_processor.py  pdf_processor.py
src/pdfize/progress_bar/: base.py  cli.py  enums.py
src/processor/: base.py  image_processor.py  pdf_processor.py
src/progress_bar/: base.py  cli.py
src/util/: pdf_util.py
toolkits/: path_tool.py  progress_bar.py
util/: __init__.py  image_util.py  path_util.py  pdf_util.py  processor.py  progress_bar.py
